[gd_scene load_steps=3 format=3 uid="uid://tsgykbpgs6r0"]

[ext_resource type="Script" path="res://hud/inventory/item_tooltip.gd" id="1_j8pot"]
[ext_resource type="PackedScene" uid="uid://ctggnhnik5da8" path="res://hud/inventory/stat_tooltip_container.tscn" id="1_q16ta"]

[node name="ItemTooltip" type="Control"]
custom_minimum_size = Vector2(150, 200)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j8pot")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ItemName" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Default Helm"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemType" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Helm"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RequiredLevel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Helm"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatTooltipContainer" parent="VBoxContainer" instance=ExtResource("1_q16ta")]
layout_mode = 2

[node name="EffectInfo" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Restores 400 HP"

[node name="StackInfo" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "1/20"
horizontal_alignment = 2
vertical_alignment = 1
